# SmallGemm

./: CMakeLists.txt  README.md  conanfile.txt  graphs.ipynb  linux_debug.profile  linux_release.profile
bench/: CMakeLists.txt  bench.cc  results.csv
include/sgemm/: matmul.h
src/: matmul.c
tests/: CMakeLists.txt  test.cc
